--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/navigation.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/navigation.yml
@@ -8,3 +8,13 @@ sylius_resource:
             classes:
                 model: Nugato\Bundle\NuCmsBundle\Entity\Navigation\Navigation
                 form: Nugato\Bundle\NuCmsBundle\Form\NavigationType
+                repository: Nugato\Bundle\NuCmsBundle\Repository\Navigation\NavigationRepository
+
+        nucms.navigation_item:
+            driver: doctrine/orm
+            classes:
+                model: Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItem
+                repository: Nugato\Bundle\NuCmsBundle\Repository\Navigation\NavigationItemRepository
+            translation:
+                classes:
+                    model: Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItemTranslation
