--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/navigation.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/navigation.yml
@@ -14,9 +14,7 @@ sylius_resource:
             driver: doctrine/orm
             classes:
                 model: Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItem
-#                form: Nugato\Bundle\NuCmsBundle\Form\Navigation\NavigationItemType
                 repository: Nugato\Bundle\NuCmsBundle\Repository\Navigation\NavigationItemRepository
-#            translation:
-#                classes:
-#                    model: Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItemTranslation
-#                    form: Sylius\Bundle\TaxonomyBundle\Form\Type\TaxonTranslationType
+            translation:
+                classes:
+                    model: Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItemTranslation
