Add URL to the Navigation module

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Navigation.NavigationItemTranslation.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Navigation.NavigationItemTranslation.orm.yml
@@ -14,6 +14,9 @@ Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItemTranslation:
         name:
             type: string
             length: 255
+        url:
+            type: string
+            length: 255
     indexes:
         search_idx:
             columns: name
