--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids.yml
@@ -6,6 +6,7 @@ imports:
     - { resource: 'grids/admin/page.yml' }
     - { resource: 'grids/admin/taxon.yml' }
     - { resource: 'grids/admin/navigation.yml' }
+    - { resource: 'grids/admin/file.yml' }
 
 sylius_grid:
     templates:
