--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-gaufrette-bundle": "~0.5",
         "knplabs/knp-menu-bundle": "^2.0",
+        "liip/imagine-bundle": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sylius/grid-bundle": "^1.0",
