Add cache clearing after file remove

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/file.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/file.yml
@@ -28,6 +28,8 @@ services:
         class: Nugato\Bundle\NuCmsBundle\EventListener\FileRemoveListener
         arguments:
             - '@nucms.file.file_uploader'
+            - '@liip_imagine.cache.manager'
+            - '@liip_imagine.filter.manager'
         tags:
             - { name: doctrine.event_listener, event: postRemove }
 
