Integrate SyliusFixtureBundle and write first Locale migrations

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
@@ -10,6 +10,7 @@ imports:
     - { resource: "@NugatoNuCmsBundle/Resources/config/resources.yml" }
     - { resource: "@NugatoNuCmsBundle/Resources/config/grids.yml" }
     - { resource: "@NugatoNuCmsBundle/Resources/config/users.yml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/fixtures.yml" }
     - { resource: "@SyliusTaxonomyBundle/Resources/config/app/config.yml" }
 
 fos_rest:
