--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "liip/imagine-bundle": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "sylius/fixtures-bundle": "^1.0",
         "sylius/grid-bundle": "^1.0",
         "sylius/locale-bundle": "^1.0",
         "sylius/resource-bundle": "^1.0",
