--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/page.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/page.yml
@@ -2,6 +2,7 @@
 # (c) Jacek Bednarek
 
 services:
+    # Form
     nucms.page.form.type:
         class: Nugato\Bundle\NuCmsBundle\Form\PageType
         tags:
@@ -12,3 +13,12 @@ services:
         tags:
             - { name: form.type }
         arguments: ['%nucms.model.page_translation.class%', ['sylius']]
+
+    # Fixtures
+    nucms.fixture.page:
+        class: Nugato\Bundle\NuCmsBundle\Fixture\PageFixture
+        arguments:
+            - '@nucms.factory.page'
+            - '@nucms.factory.page_translation'
+            - '@nucms.manager.page'
+        tags: [sylius_fixtures.fixture]
