Navigation fixture + remove doctrine fixture bundle

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Navigation.NavigationItem.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Navigation.NavigationItem.orm.yml
@@ -51,6 +51,7 @@ Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItem:
                 - treeParent
         navigation:
             targetEntity: Nugato\Bundle\NuCmsBundle\Entity\Navigation\Navigation
+            inversedBy: items
             joinColumn:
                 name: navigation_id
                 referencedColumnName: id
@@ -62,7 +63,4 @@ Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItem:
             mappedBy: parent
             orderBy:
                 left: ASC
-#            orderByField:
-#                name: position
-#                direction: ASC
     lifecycleCallbacks: {  }
