--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/navigation.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/navigation.yml
@@ -7,3 +7,11 @@ services:
         tags:
             - { name: form.type }
         arguments: ['%nucms.model.navigation.class%', ['sylius']]
+
+    # Fixtures
+    nucms.fixture.navigation:
+        class: Nugato\Bundle\NuCmsBundle\Fixture\NavigationFixture
+        arguments:
+            - '@nucms.factory.navigation'
+            - '@nucms.manager.navigation'
+        tags: [sylius_fixtures.fixture]
