Navigation item fixture

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Navigation.NavigationItem.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Navigation.NavigationItem.orm.yml
@@ -61,6 +61,8 @@ Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItem:
         children:
             targetEntity: Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItem
             mappedBy: parent
+            cascade:
+                - persist
             orderBy:
                 left: ASC
     lifecycleCallbacks: {  }
