--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/controller.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/controller.yml
@@ -2,8 +2,17 @@
 # (c) Jacek Bednarek
 
 services:
-    Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:
+    nucms.controller.web.page:
+        class: Nugato\Bundle\NuCmsBundle\Controller\Web\PageController
         arguments:
             - '@nucms.context.locale.request_based_with_default'
+            - '@sylius.locale_provider'
             - '@nucms.repository.page'
+        tags: ['controller.service_arguments']
+
+    nucms.controller.web.locale_switch:
+        class: Nugato\Bundle\NuCmsBundle\Controller\Web\LocaleSwitchController
+        arguments:
+            - '@nucms.context.locale.request_based_with_default'
+            - '@sylius.locale_provider'
         tags: ['controller.service_arguments']
